--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <input type="text" placeholder="Type your text or URL" id="qr-text">
             <div>
             <label for="sizes">Select Size:</label>
+
+            <!-- what types of size you wants to generate qr -->
+
             <select id="sizes">
                 <option value="100">100x100</option>
                 <option value="200">200x200</option>
