--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
     </div>
 
+    <!-- javascript -->
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </body>
