--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>QR Code Generator | Code Traversal</title>
     <link rel="icon" href="tlogo.jpeg">
 </head>
+<!-- add all design as you needed -->
 <body>
     <div class="box">
         <div class="qr-header">
